# terminal-calculator

./: Cargo.toml  README.md  demo.cast  demo_script.sh  record_demo.exp
src/: calculator.rs  grammar.lalrpop  lib.rs  main.rs  ui.rs
