[package]
name = "terminal_calculator"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
tokio = { version = "1.36.0", features = ["full"] }

lalrpop-util = { version = "0.20.0", features = ["lexer"] }
